Added Post Processing Panel

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -39,52 +39,100 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=994,550
-Size=212,38
+Pos=86,135
+Size=584,413
 Collapsed=0
 
 [Window][Scene View]
-Pos=200,19
-Size=809,210
+Pos=191,19
+Size=763,210
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Game View]
-Pos=200,231
-Size=809,412
+Pos=191,231
+Size=763,412
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][World Outliner]
 Pos=0,19
-Size=198,658
+Size=189,658
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][Properties]
-Pos=1011,19
-Size=249,658
+Pos=1015,19
+Size=245,658
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Example: Documents]
+ViewportPos=128,97
+ViewportId=0x1FD64BEB
+Size=607,944
+Collapsed=0
+
+[Window][Example: Simple layout]
+ViewportPos=76,132
+ViewportId=0x32FFF4A6
+Size=500,440
+Collapsed=0
+
+[Window][Example: Custom rendering]
+ViewportPos=85,223
+ViewportId=0x3AC84485
+Size=485,414
+Collapsed=0
+
+[Window][Post Processing]
+Pos=956,19
+Size=304,658
+Collapsed=0
+DockId=0x00000014,0
+
+[Window][PostProcessingPanel]
+Pos=909,95
+Size=284,428
+Collapsed=0
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000 Order=0
+Column 1  Weight=1.0000 Order=2
+Column 2  Weight=1.0000 Order=1
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=114,156 Size=1260,658 Split=X
-  DockNode          ID=0x00000003 Parent=0x8B93E3BD SizeRef=198,658 Split=Y Selected=0x318D4478
-    DockNode        ID=0x00000011 Parent=0x00000003 SizeRef=198,380 Selected=0x318D4478
-    DockNode        ID=0x00000012 Parent=0x00000003 SizeRef=198,276 Selected=0x0CA9F5B7
-  DockNode          ID=0x0000000C Parent=0x8B93E3BD SizeRef=1060,658 Split=X
-    DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=809,658 Split=X
-      DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-          DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-          DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-          DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-          DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 Split=Y
-        DockNode    ID=0x0000000D Parent=0x00000007 SizeRef=809,210 Selected=0x08AA43A5
-        DockNode    ID=0x0000000E Parent=0x00000007 SizeRef=809,446 Split=Y
-          DockNode  ID=0x0000000F Parent=0x0000000E SizeRef=809,412 Selected=0x642CEEBB
-          DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=809,32 CentralNode=1
-    DockNode        ID=0x00000002 Parent=0x0000000C SizeRef=249,658 Selected=0x199AB496
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=192,234 Size=1260,658 Split=X
+  DockNode            ID=0x00000013 Parent=0x8B93E3BD SizeRef=954,658 Split=X
+    DockNode          ID=0x00000003 Parent=0x00000013 SizeRef=189,658 Split=Y Selected=0x318D4478
+      DockNode        ID=0x00000011 Parent=0x00000003 SizeRef=198,380 Selected=0x318D4478
+      DockNode        ID=0x00000012 Parent=0x00000003 SizeRef=198,276 Selected=0x0CA9F5B7
+    DockNode          ID=0x0000000C Parent=0x00000013 SizeRef=763,658 Split=X
+      DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=822,658 Split=X
+        DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+          DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+            DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+            DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+          DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+            DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+            DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+        DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 Split=Y
+          DockNode    ID=0x0000000D Parent=0x00000007 SizeRef=809,210 Selected=0x08AA43A5
+          DockNode    ID=0x0000000E Parent=0x00000007 SizeRef=809,446 Split=Y
+            DockNode  ID=0x0000000F Parent=0x0000000E SizeRef=809,412 Selected=0x642CEEBB
+            DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=809,32 CentralNode=1
+      DockNode        ID=0x00000002 Parent=0x0000000C SizeRef=245,658 Selected=0x199AB496
+  DockNode            ID=0x00000014 Parent=0x8B93E3BD SizeRef=304,658 Selected=0x3C6695C2
 
