--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -12,7 +12,7 @@ Collapsed=0
 Pos=0,401
 Size=198,276
 Collapsed=0
-DockId=0x00000012,0
+DockId=0x00000003,0
 
 [Window][Testing]
 Pos=559,19
@@ -39,27 +39,28 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=86,135
+ViewportPos=1397,497
+ViewportId=0xE927CF2F
 Size=584,413
 Collapsed=0
 
 [Window][Scene View]
-Pos=191,19
-Size=763,210
-Collapsed=0
-DockId=0x0000000D,0
-
-[Window][Game View]
-Pos=191,231
-Size=763,412
+Pos=0,19
+Size=536,624
 Collapsed=0
 DockId=0x0000000F,0
 
-[Window][World Outliner]
-Pos=0,19
-Size=189,658
+[Window][Game View]
+Pos=538,19
+Size=688,624
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000010,0
+
+[Window][World Outliner]
+Pos=1228,19
+Size=32,658
+Collapsed=0
+DockId=0x00000012,1
 
 [Window][Properties]
 Pos=1015,19
@@ -86,10 +87,10 @@ Size=485,414
 Collapsed=0
 
 [Window][Post Processing]
-Pos=956,19
-Size=304,658
+Pos=1228,19
+Size=32,658
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x00000012,0
 
 [Window][PostProcessingPanel]
 Pos=909,95
@@ -114,25 +115,23 @@ Column 1  Width=63
 Column 2  Width=63
 
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=192,234 Size=1260,658 Split=X
-  DockNode            ID=0x00000013 Parent=0x8B93E3BD SizeRef=954,658 Split=X
-    DockNode          ID=0x00000003 Parent=0x00000013 SizeRef=189,658 Split=Y Selected=0x318D4478
-      DockNode        ID=0x00000011 Parent=0x00000003 SizeRef=198,380 Selected=0x318D4478
-      DockNode        ID=0x00000012 Parent=0x00000003 SizeRef=198,276 Selected=0x0CA9F5B7
-    DockNode          ID=0x0000000C Parent=0x00000013 SizeRef=763,658 Split=X
-      DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=822,658 Split=X
-        DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-          DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-            DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-            DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-          DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-            DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-            DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-        DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 Split=Y
-          DockNode    ID=0x0000000D Parent=0x00000007 SizeRef=809,210 Selected=0x08AA43A5
-          DockNode    ID=0x0000000E Parent=0x00000007 SizeRef=809,446 Split=Y
-            DockNode  ID=0x0000000F Parent=0x0000000E SizeRef=809,412 Selected=0x642CEEBB
-            DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=809,32 CentralNode=1
-      DockNode        ID=0x00000002 Parent=0x0000000C SizeRef=245,658 Selected=0x199AB496
-  DockNode            ID=0x00000014 Parent=0x8B93E3BD SizeRef=304,658 Selected=0x3C6695C2
+DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=119,267 Size=1260,658 Split=X
+  DockNode              ID=0x00000011 Parent=0x8B93E3BD SizeRef=1226,658 Split=Y
+    DockNode            ID=0x0000000D Parent=0x00000011 SizeRef=1260,624 Split=X Selected=0x08AA43A5
+      DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=536,433 Selected=0x08AA43A5
+      DockNode          ID=0x00000010 Parent=0x0000000D SizeRef=688,433 Selected=0x642CEEBB
+    DockNode            ID=0x0000000E Parent=0x00000011 SizeRef=1260,32 Split=X
+      DockNode          ID=0x00000003 Parent=0x0000000E SizeRef=189,658 Selected=0x318D4478
+      DockNode          ID=0x0000000C Parent=0x0000000E SizeRef=763,658 Split=X
+        DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=822,658 Split=X
+          DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+            DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+              DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+              DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+            DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+              DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+              DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+          DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1
+        DockNode        ID=0x00000002 Parent=0x0000000C SizeRef=245,658 Selected=0x199AB496
+  DockNode              ID=0x00000012 Parent=0x8B93E3BD SizeRef=32,658 Selected=0x3C6695C2
 
