--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -39,26 +39,25 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1129,269
-ViewportId=0xE927CF2F
+Pos=184,646
 Size=584,413
 Collapsed=1
 
 [Window][Scene View]
-Pos=201,19
-Size=312,624
+Pos=235,19
+Size=32,624
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Game View]
-Pos=515,19
-Size=609,624
+Pos=269,19
+Size=860,624
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][World Outliner]
-Pos=1126,19
-Size=134,658
+Pos=1131,19
+Size=129,658
 Collapsed=0
 DockId=0x00000012,1
 
@@ -87,8 +86,8 @@ Size=485,414
 Collapsed=0
 
 [Window][Post Processing]
-Pos=1126,19
-Size=134,658
+Pos=1131,19
+Size=129,658
 Collapsed=0
 DockId=0x00000012,0
 
@@ -111,9 +110,15 @@ DockId=0x00000012,1
 
 [Window][Entity Inspector]
 Pos=0,19
-Size=199,658
+Size=233,143
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x00000015,0
+
+[Window][Camera Controls]
+Pos=0,164
+Size=233,513
+Collapsed=0
+DockId=0x00000016,0
 
 [Table][0x861D378E,3]
 Column 0  Weight=1.0000 Order=0
@@ -133,13 +138,15 @@ Column 1  Width=63
 Column 2  Width=63
 
 [Docking][Data]
-DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=140,182 Size=1260,658 Split=X
-  DockNode                ID=0x00000013 Parent=0x8B93E3BD SizeRef=199,658 Selected=0x60AF69E6
-  DockNode                ID=0x00000014 Parent=0x8B93E3BD SizeRef=1059,658 Split=X
-    DockNode              ID=0x00000011 Parent=0x00000014 SizeRef=923,658 Split=Y
+DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=270,312 Size=1260,658 Split=X
+  DockNode                ID=0x00000013 Parent=0x8B93E3BD SizeRef=233,658 Split=Y Selected=0x60AF69E6
+    DockNode              ID=0x00000015 Parent=0x00000013 SizeRef=233,143 Selected=0x60AF69E6
+    DockNode              ID=0x00000016 Parent=0x00000013 SizeRef=233,513 Selected=0x0E07B13A
+  DockNode                ID=0x00000014 Parent=0x8B93E3BD SizeRef=1025,658 Split=X
+    DockNode              ID=0x00000011 Parent=0x00000014 SizeRef=894,658 Split=Y
       DockNode            ID=0x0000000D Parent=0x00000011 SizeRef=1260,624 Split=X Selected=0x08AA43A5
-        DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=312,433 Selected=0x08AA43A5
-        DockNode          ID=0x00000010 Parent=0x0000000D SizeRef=609,433 Selected=0x642CEEBB
+        DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=32,433 Selected=0x08AA43A5
+        DockNode          ID=0x00000010 Parent=0x0000000D SizeRef=860,433 Selected=0x642CEEBB
       DockNode            ID=0x0000000E Parent=0x00000011 SizeRef=1260,32 Split=X
         DockNode          ID=0x00000003 Parent=0x0000000E SizeRef=189,658 Selected=0x318D4478
         DockNode          ID=0x0000000C Parent=0x0000000E SizeRef=763,658 Split=X
@@ -153,5 +160,5 @@ DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=140,182 Size=1260,
                 DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
             DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1
           DockNode        ID=0x00000002 Parent=0x0000000C SizeRef=245,658 Selected=0x199AB496
-    DockNode              ID=0x00000012 Parent=0x00000014 SizeRef=134,658 Selected=0x3C6695C2
+    DockNode              ID=0x00000012 Parent=0x00000014 SizeRef=129,658 Selected=0x3C6695C2
 
