--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -8,12 +8,6 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Credits]
-Pos=0,401
-Size=198,276
-Collapsed=0
-DockId=0x00000003,0
-
 [Window][Testing]
 Pos=559,19
 Size=519,325
@@ -39,25 +33,26 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=184,646
-Size=584,413
-Collapsed=1
-
-[Window][Scene View]
-Pos=235,19
-Size=32,624
-Collapsed=0
-DockId=0x0000000F,0
-
-[Window][Game View]
-Pos=269,19
-Size=817,624
+Pos=0,658
+Size=1260,19
 Collapsed=0
 DockId=0x00000010,0
 
+[Window][Scene View]
+Pos=235,347
+Size=851,275
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][Game View]
+Pos=0,19
+Size=1260,326
+Collapsed=0
+DockId=0x00000003,0
+
 [Window][World Outliner]
-Pos=1088,19
-Size=172,658
+Pos=1088,347
+Size=172,309
 Collapsed=0
 DockId=0x00000012,1
 
@@ -86,8 +81,8 @@ Size=485,414
 Collapsed=0
 
 [Window][Post Processing]
-Pos=1088,19
-Size=172,658
+Pos=1088,347
+Size=172,309
 Collapsed=0
 DockId=0x00000012,0
 
@@ -109,16 +104,68 @@ Collapsed=0
 DockId=0x00000012,1
 
 [Window][Entity Inspector]
-Pos=0,19
-Size=233,143
+Pos=0,347
+Size=233,176
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Camera Controls]
-Pos=0,164
-Size=233,513
+Pos=0,525
+Size=233,131
 Collapsed=0
 DockId=0x00000016,0
+
+[Window][Credits##MainMenuBar2]
+Pos=71,62
+Size=464,442
+Collapsed=0
+
+[Window][ColorPickerPlaceholder##MainMenuBar2]
+Pos=417,267
+Size=348,326
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=626,420
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=57,210
+Size=259,96
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=604,53
+Size=451,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+ViewportPos=967,349
+ViewportId=0xE1C92D5D
+Size=451,61
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+ViewportPos=174,197
+ViewportId=0x6D551092
+Size=339,902
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,19
+Size=1260,658
+Collapsed=0
+
+[Window][PlaceholderHUD##MainMenuBar2]
+Pos=121,102
+Size=240,145
+Collapsed=0
 
 [Table][0x861D378E,3]
 Column 0  Weight=1.0000 Order=0
@@ -137,28 +184,80 @@ Column 0  Width=63
 Column 1  Width=63
 Column 2  Width=63
 
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=42
+Column 3  Weight=1.0000
+
 [Docking][Data]
-DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=114,156 Size=1260,658 Split=X
-  DockNode                ID=0x00000013 Parent=0x8B93E3BD SizeRef=233,658 Split=Y Selected=0x60AF69E6
-    DockNode              ID=0x00000015 Parent=0x00000013 SizeRef=233,143 Selected=0x60AF69E6
-    DockNode              ID=0x00000016 Parent=0x00000013 SizeRef=233,513 Selected=0x0E07B13A
-  DockNode                ID=0x00000014 Parent=0x8B93E3BD SizeRef=1025,658 Split=X
-    DockNode              ID=0x00000011 Parent=0x00000014 SizeRef=851,658 Split=Y
-      DockNode            ID=0x0000000D Parent=0x00000011 SizeRef=1260,624 Split=X Selected=0x08AA43A5
-        DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=32,433 Selected=0x08AA43A5
-        DockNode          ID=0x00000010 Parent=0x0000000D SizeRef=817,433 Selected=0x642CEEBB
-      DockNode            ID=0x0000000E Parent=0x00000011 SizeRef=1260,32 Split=X
-        DockNode          ID=0x00000003 Parent=0x0000000E SizeRef=189,658 Selected=0x318D4478
-        DockNode          ID=0x0000000C Parent=0x0000000E SizeRef=763,658 Split=X
-          DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=822,658 Split=X
-            DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-              DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-                DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-                DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-              DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-                DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-                DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-            DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1
-          DockNode        ID=0x00000002 Parent=0x0000000C SizeRef=245,658 Selected=0x199AB496
-    DockNode              ID=0x00000012 Parent=0x00000014 SizeRef=172,658 Selected=0x318D4478
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=36,78 Size=1260,658 Split=Y
+  DockNode                  ID=0x0000000F Parent=0x8B93E3BD SizeRef=1260,637 Split=Y
+    DockNode                ID=0x00000003 Parent=0x0000000F SizeRef=1260,326 Selected=0x642CEEBB
+    DockNode                ID=0x0000000C Parent=0x0000000F SizeRef=1260,330 Split=X
+      DockNode              ID=0x00000013 Parent=0x0000000C SizeRef=233,658 Split=Y Selected=0x60AF69E6
+        DockNode            ID=0x00000015 Parent=0x00000013 SizeRef=233,376 Selected=0x60AF69E6
+        DockNode            ID=0x00000016 Parent=0x00000013 SizeRef=233,280 Selected=0x0E07B13A
+      DockNode              ID=0x00000014 Parent=0x0000000C SizeRef=1025,658 Split=X
+        DockNode            ID=0x00000011 Parent=0x00000014 SizeRef=851,658 Split=Y
+          DockNode          ID=0x0000000D Parent=0x00000011 SizeRef=1260,624 Selected=0x08AA43A5
+          DockNode          ID=0x0000000E Parent=0x00000011 SizeRef=1260,32 Split=X
+            DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=822,658 Split=X
+              DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+                DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+                  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+                  DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+                DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+                  DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+                  DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+              DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1
+            DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=245,658 Selected=0x199AB496
+        DockNode            ID=0x00000012 Parent=0x00000014 SizeRef=172,658 Selected=0x3C6695C2
+  DockNode                  ID=0x00000010 Parent=0x8B93E3BD SizeRef=1260,19 Selected=0xE87781F4
 
