--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,10 +1,10 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1260,658
+Size=46,32
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=0,0
 Size=400,400
 Collapsed=0
 
@@ -33,26 +33,26 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=0,658
-Size=1260,19
+Pos=17,19
+Size=6,32
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x00000007,2
 
 [Window][Scene View]
-Pos=235,347
-Size=851,275
+Pos=17,19
+Size=6,32
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000007,1
 
 [Window][Game View]
-Pos=0,19
-Size=1260,326
+Pos=17,19
+Size=6,32
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][World Outliner]
-Pos=1088,347
-Size=172,309
+Pos=25,19
+Size=7,32
 Collapsed=0
 DockId=0x00000012,1
 
@@ -81,8 +81,8 @@ Size=485,414
 Collapsed=0
 
 [Window][Post Processing]
-Pos=1088,347
-Size=172,309
+Pos=25,19
+Size=7,32
 Collapsed=0
 DockId=0x00000012,0
 
@@ -104,14 +104,14 @@ Collapsed=0
 DockId=0x00000012,1
 
 [Window][Entity Inspector]
-Pos=0,347
-Size=233,176
+Pos=0,19
+Size=15,15
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Camera Controls]
-Pos=0,525
-Size=233,131
+Pos=0,36
+Size=15,15
 Collapsed=0
 DockId=0x00000016,0
 
@@ -237,27 +237,21 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=218,260 Size=1260,658 Split=Y
-  DockNode                  ID=0x0000000F Parent=0x8B93E3BD SizeRef=1260,637 Split=Y
-    DockNode                ID=0x00000003 Parent=0x0000000F SizeRef=1260,326 Selected=0x642CEEBB
-    DockNode                ID=0x0000000C Parent=0x0000000F SizeRef=1260,330 Split=X
-      DockNode              ID=0x00000013 Parent=0x0000000C SizeRef=233,658 Split=Y Selected=0x60AF69E6
-        DockNode            ID=0x00000015 Parent=0x00000013 SizeRef=233,376 Selected=0x60AF69E6
-        DockNode            ID=0x00000016 Parent=0x00000013 SizeRef=233,280 Selected=0x0E07B13A
-      DockNode              ID=0x00000014 Parent=0x0000000C SizeRef=1025,658 Split=X
-        DockNode            ID=0x00000011 Parent=0x00000014 SizeRef=851,658 Split=Y
-          DockNode          ID=0x0000000D Parent=0x00000011 SizeRef=1260,624 Selected=0x08AA43A5
-          DockNode          ID=0x0000000E Parent=0x00000011 SizeRef=1260,32 Split=X
-            DockNode        ID=0x00000001 Parent=0x0000000E SizeRef=822,658 Split=X
-              DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-                DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-                  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-                  DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-                DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-                  DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-                  DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-              DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1
-            DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=245,658 Selected=0x199AB496
-        DockNode            ID=0x00000012 Parent=0x00000014 SizeRef=172,658 Selected=0x3C6695C2
-  DockNode                  ID=0x00000010 Parent=0x8B93E3BD SizeRef=1260,19 Selected=0xE87781F4
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=32,32 Split=X
+  DockNode            ID=0x00000013 Parent=0x8B93E3BD SizeRef=233,658 Split=Y Selected=0x60AF69E6
+    DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
+    DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
+  DockNode            ID=0x00000014 Parent=0x8B93E3BD SizeRef=1025,658 Split=X
+    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=937,658 Split=X
+      DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
+        DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+          DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+            DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+            DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+          DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+            DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+            DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+        DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1 Selected=0x642CEEBB
+      DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
+    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=86,658 Selected=0x3C6695C2
 
