--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,10 +1,10 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=46,32
+Size=1266,658
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=0,0
+Pos=516,134
 Size=400,400
 Collapsed=0
 
@@ -33,20 +33,20 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=17,19
-Size=6,32
-Collapsed=0
-DockId=0x00000007,2
-
-[Window][Scene View]
-Pos=17,19
-Size=6,32
+Pos=235,19
+Size=1031,329
 Collapsed=0
 DockId=0x00000007,1
 
+[Window][Scene View]
+Pos=0,350
+Size=1266,327
+Collapsed=0
+DockId=0x0000000C,0
+
 [Window][Game View]
-Pos=17,19
-Size=6,32
+Pos=235,19
+Size=1031,329
 Collapsed=0
 DockId=0x00000007,0
 
@@ -110,8 +110,8 @@ Collapsed=0
 DockId=0x00000015,0
 
 [Window][Camera Controls]
-Pos=0,36
-Size=15,15
+Pos=0,19
+Size=233,329
 Collapsed=0
 DockId=0x00000016,0
 
@@ -237,21 +237,23 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=32,32 Split=X
-  DockNode            ID=0x00000013 Parent=0x8B93E3BD SizeRef=233,658 Split=Y Selected=0x60AF69E6
-    DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
-    DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
-  DockNode            ID=0x00000014 Parent=0x8B93E3BD SizeRef=1025,658 Split=X
-    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=937,658 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
-        DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-          DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-            DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-            DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-          DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-            DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-            DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-        DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1 Selected=0x642CEEBB
-      DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
-    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=86,658 Selected=0x3C6695C2
+DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=36,78 Size=1266,658 Split=Y
+  DockNode              ID=0x00000003 Parent=0x8B93E3BD SizeRef=1266,329 Split=X
+    DockNode            ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
+      DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
+      DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
+    DockNode            ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
+      DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
+        DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
+          DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+            DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+              DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+              DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+            DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+              DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+              DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+          DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1 Selected=0x642CEEBB
+        DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
+      DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
+  DockNode              ID=0x0000000C Parent=0x8B93E3BD SizeRef=1266,327 Selected=0x08AA43A5
 
