Refactored a lot: Renderer is now has RenderDevice and RenderContext

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -4,7 +4,7 @@ Size=1266,658
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=516,134
+Pos=0,0
 Size=400,400
 Collapsed=0
 
@@ -237,7 +237,7 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=36,78 Size=1266,658 Split=Y
+DockSpace               ID=0x8B93E3BD Pos=36,78 Size=1266,658 Split=Y
   DockNode              ID=0x00000003 Parent=0x8B93E3BD SizeRef=1266,329 Split=X
     DockNode            ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
       DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
