--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,11 +1,11 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1266,658
+Size=1260,658
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=0,0
-Size=400,400
+Pos=237,209
+Size=244,275
 Collapsed=0
 
 [Window][Testing]
@@ -167,6 +167,79 @@ Pos=121,102
 Size=240,145
 Collapsed=0
 
+[Window][TestUIScreen1]
+Pos=60,60
+Size=225,64
+Collapsed=0
+
+[Window][Test UI Screen##1]
+Size=290,677
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][Test UI Screen##4]
+Pos=105,373
+Size=445,192
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Test UI Screen##3]
+Pos=552,164
+Size=261,199
+Collapsed=0
+DockId=0x00000018,0
+
+[Window][Test UI Screen##2]
+Pos=552,365
+Size=261,200
+Collapsed=0
+DockId=0x00000019,0
+
+[Window][World Outliner##2]
+Pos=830,43
+Size=247,321
+Collapsed=0
+
+[Window][World Outliner##3]
+Pos=520,132
+Size=205,237
+Collapsed=0
+
+[Window][Viewport##2]
+Pos=557,155
+Size=328,205
+Collapsed=0
+
+[Window][World Outliner##1]
+Pos=193,258
+Size=275,212
+Collapsed=0
+
+[Window][Viewport##3]
+Pos=533,136
+Size=257,188
+Collapsed=0
+
+[Window][World Outliner##4]
+Pos=108,250
+Size=178,101
+Collapsed=0
+
+[Window][Viewport##5]
+Pos=145,144
+Size=139,82
+Collapsed=0
+
+[Window][World Outliner##6]
+Pos=376,458
+Size=204,125
+Collapsed=0
+
+[Window][World Outliner##7]
+Pos=291,86
+Size=194,132
+Collapsed=0
+
 [Table][0x861D378E,3]
 Column 0  Weight=1.0000 Order=0
 Column 1  Weight=1.0000 Order=2
@@ -237,23 +310,30 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace               ID=0x8B93E3BD Pos=36,78 Size=1266,658 Split=Y
-  DockNode              ID=0x00000003 Parent=0x8B93E3BD SizeRef=1266,329 Split=X
-    DockNode            ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
-      DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
-      DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
-    DockNode            ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
-      DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
-        DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
-          DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-            DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-              DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-              DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-            DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-              DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-              DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-          DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1 Selected=0x642CEEBB
-        DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
-      DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
-  DockNode              ID=0x0000000C Parent=0x8B93E3BD SizeRef=1266,327 Selected=0x08AA43A5
+DockNode                  ID=0x0000000D Pos=167,249 Size=255,160 Split=X
+  DockNode                ID=0x0000000E Parent=0x0000000D SizeRef=111,111 Selected=0xFE574374
+  DockNode                ID=0x0000000F Parent=0x0000000D SizeRef=65,111 Split=Y Selected=0x84971014
+    DockNode              ID=0x00000018 Parent=0x0000000F SizeRef=261,199 Selected=0x84971014
+    DockNode              ID=0x00000019 Parent=0x0000000F SizeRef=261,200 Selected=0xB9F739A4
+DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=140,182 Size=1260,658 Split=X
+  DockNode                ID=0x00000010 Parent=0x8B93E3BD SizeRef=290,677 Selected=0xFE574374
+  DockNode                ID=0x00000017 Parent=0x8B93E3BD SizeRef=696,677 Split=Y
+    DockNode              ID=0x00000003 Parent=0x00000017 SizeRef=1266,329 Split=X
+      DockNode            ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
+        DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
+        DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
+      DockNode            ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
+        DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
+          DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
+            DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+              DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+                DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+                DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+              DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+                DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+                DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+            DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1 Selected=0xFE574374
+          DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
+        DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
+    DockNode              ID=0x0000000C Parent=0x00000017 SizeRef=1266,327 Selected=0x08AA43A5
 
