Added add component functionality and fixed deletion bug where the map entry exists even when deleted.

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -33,7 +33,7 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=509,130
+Pos=509,131
 Size=670,736
 Collapsed=0
 
@@ -227,7 +227,7 @@ Size=178,101
 Collapsed=0
 
 [Window][Viewport##5]
-Pos=145,144
+Pos=310,226
 Size=139,82
 Collapsed=0
 
@@ -256,6 +256,21 @@ DockId=0x00000007,0
 [Window][Inspector##5]
 Pos=119,426
 Size=239,226
+Collapsed=0
+
+[Window][Delete?]
+Pos=714,414
+Size=311,118
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=665,387
+Size=409,172
+Collapsed=0
+
+[Window][Inspector##6]
+Pos=252,180
+Size=313,205
 Collapsed=0
 
 [Table][0x861D378E,3]
