Component system is now utilizing shared prts

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -33,7 +33,7 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=509,131
+Pos=383,104
 Size=670,736
 Collapsed=0
 
@@ -227,8 +227,8 @@ Size=178,101
 Collapsed=0
 
 [Window][Viewport##5]
-Pos=310,226
-Size=139,82
+Pos=875,156
+Size=580,423
 Collapsed=0
 
 [Window][World Outliner##6]
@@ -248,10 +248,9 @@ Collapsed=0
 DockId=0x0000001E,0
 
 [Window][Viewport##4]
-Pos=264,19
-Size=1199,928
+Pos=239,215
+Size=516,435
 Collapsed=0
-DockId=0x00000007,0
 
 [Window][Inspector##5]
 Pos=119,426
@@ -271,6 +270,11 @@ Collapsed=0
 [Window][Inspector##6]
 Pos=252,180
 Size=313,205
+Collapsed=0
+
+[Window][Inspector##4]
+Pos=22,368
+Size=437,371
 Collapsed=0
 
 [Table][0x861D378E,3]
@@ -367,7 +371,7 @@ DockNode                        ID=0x0000000D Pos=167,249 Size=255,160 Split=X
   DockNode                      ID=0x0000000F Parent=0x0000000D SizeRef=65,111 Split=Y Selected=0x84971014
     DockNode                    ID=0x00000018 Parent=0x0000000F SizeRef=261,199 Selected=0x84971014
     DockNode                    ID=0x00000019 Parent=0x0000000F SizeRef=261,200 Selected=0xB9F739A4
-DockSpace                       ID=0x8B93E3BD Window=0xA787BDB4 Pos=140,142 Size=1740,928 Split=X
+DockSpace                       ID=0x8B93E3BD Window=0xA787BDB4 Pos=166,142 Size=1740,928 Split=X
   DockNode                      ID=0x0000001E Parent=0x8B93E3BD SizeRef=262,658 Selected=0x46AD5C2D
   DockNode                      ID=0x0000001F Parent=0x8B93E3BD SizeRef=996,658 Split=X
     DockNode                    ID=0x0000001C Parent=0x0000001F SizeRef=983,658 Split=X
